--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,88 @@
-h1 {
-  color: red;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
+#wrap {
+  background-color: #F9F6F1;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+/* header */
+
+header {
+  padding: 12px 24px;
+}
+
+/* main */
+
+#post-list {
+  border-top: 1px solid #d7d7d7;
+  border-bottom: 1px solid #d7d7d7;
+}
+
+.post-item {
+  width: 100%;
+  padding: 12px 24px;
+  border-bottom: 1px solid #d7d7d7;
+  position: relative;
+  cursor: pointer;
+}
+
+.post-item:last-child {
+  border-bottom: none;
+}
+
+.post-item:hover::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.1;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.post-name {
+  font-size: 14px;
+  opacity: 0.5;
+}
+
+#action-button-container {
+  padding: 12px 24px;
+}
+
+#action-button-write {
+  background-color: #9BA88D;
+  border: none;
+  color: #ffffff;
+  font-size: 18px;
+  padding: 4px 12px;
+  border-radius: 25px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+#action-button-write:hover::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.1;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
