feat: 게시글 작성 기능 및 ui 구현
- 게시글 작성할 수 있는 기능 추가
- 게시글 작성을 위한 modal 등 ui 구현

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <div id="modal-background"></div>
+  <%- include('modals'); %>
   <div id="wrap">
     <header>
       <h1>CRUD</h1>
@@ -30,5 +30,6 @@
       </div>
     </main>
   </div>
+  <script src="/js/main.js"></script>
 </body>
 </html>
