--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,87 @@ a {
   color: #000000;
 }
 
+/* modal */
+
+#modal-background {
+  display: none;
+  background-color: #00000036;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 1;
+}
+
+#modal-container {
+  background-color: #ffffff;
+  width: 90%;
+  border-radius: 12px;
+  padding: 12px 24px;
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  transform: translateX(-50%);
+}
+
+.modal-close-button-container {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: 10px;
+}
+
+
+#modal-close-button {
+  background: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+
+}
+
+#modal-close-button svg {
+  width: 100%;
+  height: 100%;
+}
+
+#modal-close-button svg path {
+  stroke: #9BA88D;
+}
+
+.form-input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.form-input-container input,
+.form-input-container textarea {
+  padding: 4px;
+}
+
+.form-input-guest {
+  display: flex;
+  gap: 10px;
+}
+
+.form-input-guest input {
+  width: 50%;
+}
+
+.post-write-button-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+#post-write-button {
+  background-color: #9BA88D;
+  border: none;
+  border-radius: 14px;
+  color: #ffffff;
+  padding: 4px 12px;
+}
+
 #wrap {
   background-color: #F9F6F1;
   min-width: 300px;
