--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,10 @@ a {
   color: #000000;
 }
 
+textarea {
+  resize: none;
+}
+
 /* modal */
 
 #modal-background {
@@ -49,7 +53,7 @@ a {
   border: none;
   width: 30px;
   height: 30px;
-
+  cursor: pointer;
 }
 
 #modal-close-button svg {
@@ -59,6 +63,10 @@ a {
 
 #modal-close-button svg path {
   stroke: #9BA88D;
+}
+
+#modal-post-write {
+  display: none;
 }
 
 .form-input-container {
@@ -92,6 +100,14 @@ a {
   border-radius: 14px;
   color: #ffffff;
   padding: 4px 12px;
+}
+
+#post-detail-name {
+  opacity: 0.5;
+}
+
+#post-detail-content {
+  margin: 24px 0;
 }
 
 #wrap {
@@ -134,6 +150,10 @@ header {
   position: absolute;
   left: 0;
   top: 0;
+}
+
+.post-item * {
+  pointer-events: none;
 }
 
 .post-name {
