--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,9 @@
     </header>
     <main>
       <ul id="post-list">
-        <% if(postData.length !== 0) { %>
-          <% postData.forEach((post) => { %>
-            <li class="post-item">
+        <% if(postsList.length !== 0) { %>
+          <% postsList.forEach((post) => { %>
+            <li class="post-item" data-post-id="<%= post.id %>">
               <div class="post-title"><%= post.title %></div>
               <div class="post-name"><%= post.name %></div>
             </li>
