feat: 클라이언트 환경에 PORT 값 전달
- koyeb 환경을 위해 클라이언트에서도 process.env.PORT || 3000 적용 가능하도록 변경

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+  <script>
+    const PORT = <%- PORT %>
+  </script>
   <%- include('modals'); %>
   <div id="wrap">
     <header>
