--- a/views/modals.ejs
+++ b/views/modals.ejs
@@ -138,7 +138,7 @@
       return;
     }
 
-    const response = await fetch(`http://localhost:3000/posts/${postId}`, {
+    const response = await fetch(`http://localhost:${PORT}/posts/${postId}`, {
       method: 'DELETE',
       headers: {
         'Content-Type' : 'application/json' ,
