--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <script>
-    const PORT = <%- PORT %>
+  <script>  
+    const SERVER_URL = "<%= URL %>";
   </script>
   <%- include('modals'); %>
   <div id="wrap">
