feat: 게시글 수정 기능 추가 및 코드 리펙토링
- 게시글 작성 시 입력하였던 패스워드를 이용해 게시글 수정을 할 수 있음
- 글 삭제 패스워드 인증 모달 ui를 글 수정 패스워드 인증 모달로도 사용할 수 있도록 구조 변경
- 기존의 form태그로 글을 수정할 수 있도록 코드 코드 리팩토링

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,8 +116,9 @@ textarea {
   position: relative;
 }
 
-#post-delete-confirm {
+#verify-modal {
   display: none;
+  background-color: #ffffff;
   flex-direction: column;
   gap: 4px;
   justify-content: center;
@@ -129,7 +130,7 @@ textarea {
   border: 2px solid #000000;
 }
 
-#post-delete-confirm-buttons {
+#verify-buttons {
   display: flex;
   justify-content: space-evenly;
 }
