refactor: EJS 모달 컴포넌트 분리 및 파일 이름 변경
- postForm 모달과 detail 모달 컴포넌트 분리
- modals -> modalBg로 이름 변경

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <script>  
     const SERVER_URL = "<%= URL %>";
   </script>
-  <%- include('modals'); %>
+  <%- include('modalBg'); %>
   <div id="wrap">
     <header>
       <h1>CRUD</h1>
