fix: EJS 모달 include 오타 수정
- modals/form -> modals/postForm으로 수정

--- a/views/modalBg.ejs
+++ b/views/modalBg.ejs
@@ -8,7 +8,7 @@
         </svg>
       </button>
     </div>
-    <%- include('modals/form'); %>
+    <%- include('modals/postForm'); %>
     <%- include('modals/detail'); %>
   </div>
 </div>
